# AIRelays

./: .gitignore  404.html  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  README.md  SECURITY.md  airelays.example.env  index.html  llms-full.txt  llms.txt  mkdocs.yml  pyproject.toml  sitemap.xml
.cache/swiftpm/3T5H2677C6X26/: SwiftShims-2IMTS4WWRU7VJ.pcm  _SwiftConcurrencyShims-2IMTS4WWRU7VJ.pcm
.cache/swiftpm/YHS844WX1CCO/: SwiftShims-2IMTS4WWRU7VJ.pcm  _SwiftConcurrencyShims-2IMTS4WWRU7VJ.pcm
.github/workflows/: ci.yml  desktop.yml  release.yml
adr/: index.html
adr/0001-no-silent-degradation-truncation-or-budget-invention/: index.html
adr/0002-chatgpt-subscription-backend-compatibility-boundary/: index.html
adr/0003-local-config-and-default-deny-relay-security/: index.html
adr/0004-provider-runtime-boundary-and-experimental-local-adapters/: index.html
api/: index.html
architecture/: index.html
backlog/completed/accounts/: index.html
backlog/overview/: index.html
configuration/: index.html
desktop/: README.md  package-lock.json  package.json
desktop/scripts/: bundle_runtime.sh  check_runtime.mjs  make_tray_icons.swift
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  relay.rs  settings.rs  state.rs  traffic.rs  tray.rs
desktop/ui/: index.html  style.css
disclaimer/: index.html
docs/: README.md  api.md  architecture.md  configuration.md  disclaimer.md  docs-index.md  faq.md  getting-started.md  index.md  security.md  subscription-status.md  troubleshooting.md
docs-index/: index.html
docs/adr/: 0001-no-silent-degradation-truncation-or-budget-invention.md  0002-chatgpt-subscription-backend-compatibility-boundary.md  0003-local-config-and-default-deny-relay-security.md  0004-provider-runtime-boundary-and-experimental-local-adapters.md  README.md
docs/backlog/: overview.md
faq/: index.html
getting-started/: index.html
macos/AIRelaysMenuBar/: Info.plist.template  Package.swift  README.md  package_app.sh
scripts/: set_version.py
search/: search_index.json
security/: index.html
src/airelay/: __init__.py  __main__.py  accounts.py  app.py  auth.py  backend.py  cli.py  config.py  html.py  providers.py  security.py  store.py  terminal.py  traffic.py  transforms.py  usage_tally.py
src/airelays/: __init__.py  app.py  auth.py  backend.py  cli.py  config.py  html.py  security.py  store.py  terminal.py  traffic.py  transforms.py
subscription-status/: index.html
tests/: test_accounts.py  test_auth_and_cli.py  test_auth_login.py  test_backend_and_app.py  test_config.py  test_device_login.py  test_providers.py  test_transforms.py
troubleshooting/: index.html
(+52 files in other folders)
