[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "airelays"
version = "0.5.0"
description = "AIRelays: an independent OpenAI-compatible local relay for single-user subscription-backed access."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Laurent-Philippe Albou" }
]
keywords = ["ai", "openai-compatible", "relay", "gateway", "subscription"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "keyring>=25.5.0",
  "python-multipart>=0.0.20",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "twine>=6.1.0",
]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.0.0",
  "pymdown-extensions>=10.0",
]

[project.scripts]
airelays = "airelays.cli:main"

[project.urls]
"GitHub" = "https://github.com/lpalbou/AIRelays"
"Documentation" = "https://www.lpalbou.info/AIRelays/"
"Changelog" = "https://github.com/lpalbou/AIRelays/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/airelay", "src/airelays"]
