[package]
name = "airelays-desktop"
version = "0.4.0"
description = "AIRelays tray app: supervises the local relay and hosts its dashboard."
authors = ["Laurent-Philippe Albou"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
shlex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["time"] }
local-ip-address = "0.6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
# Win32_Security is required by CreateJobObjectW: windows-sys cfg-gates it
# on that feature because the signature takes *const SECURITY_ATTRIBUTES,
# even though we always pass null.
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[lib]
name = "airelays_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
strip = true
lto = true
